--- a/templates/react-hooks-tpl/package.json
+++ b/templates/react-hooks-tpl/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "react-tpl",
+  "name": "dev2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --config ./config/webpack.prod.config.js  --env.proxyTo=production --env.NODE_ENV=production",
-    "dev": "webpack-dev-server --mode development --progress --colors --inline --config ./config/webpack.dev.config.js --env.proxyTo=dev --env.NODE_ENV=development",
-    "online": "webpack-dev-server --mode development --progress --colors --inline --config ./config/webpack.dev.config.js --env.proxyTo=online --env.NODE_ENV=development"
+    "build": "NODE_ENV=production BABEL_ENV=production webpack --mode production --config ./config/webpack.prod.config.js  --env.proxyTo=production --env.NODE_ENV=production",
+    "dev": "NODE_ENV=development BABEL_ENV=development webpack-dev-server --mode development --progress --colors --inline --config ./config/webpack.dev.config.js --env.proxyTo=dev --env.NODE_ENV=development",
+    "online": "NODE_ENV=development BABEL_ENV=development webpack-dev-server --mode development --progress --colors --inline --config ./config/webpack.dev.config.js --env.proxyTo=online --env.NODE_ENV=development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-react-require": "^3.1.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-react-app": "^9.1.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.3.0",
+    "image-webpack-loader": "^7.0.1",
     "less": "^3.11.3",
     "less-loader": "^6.1.2",
+    "less-plugin-dls": "^1.0.0-alpha.31",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.32",
@@ -33,31 +42,43 @@
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.29.5",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.2.3",
     "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@baidu/one-ui": "4.0.0-alpha-95",
+    "@baidu/one-ui-pro": "0.0.38",
+    "@baidu/one-ui-v4": "npm:@baidu/one-ui@4.0.0-alpha-95",
+    "antd": "^4.7.2",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "connected-react-router": "^6.8.0",
     "core-js": "^2.6.11",
-    "history": "^5.0.0",
+    "dls-icons-react": "^0.12.0",
+    "highlight.js": "^10.3.2",
+    "history": "^4.7.2",
     "ionicons": "^4.5.9-1",
+    "jquery": "^3.5.1",
     "keymirror": "^0.1.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
+    "marked": "^1.2.2",
     "mockjs": "^1.1.0",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "qs": "^6.9.4",
+    "react": "^17.0.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-router-redux": "^4.0.8",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "swiper": "^3.4.1"
   }
 }
